# stp-smartwatch-esp32-idf

./: .gitignore  README.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/connectivity/: time_sync.c  time_sync.h  wifi.c
main/drivers/: i2c_scan.c  i2c_scan.h  imu_driver.c  imu_driver.h  lcd_driver.c  lvgl_tick.c  touch_driver.c  touch_driver.h
main/features/: battery.c  battery.h  battery_percentage.c  step_counter.c  step_counter.h  stopwatch.c  stopwatch.h
main/old_ui/: screen.c
main/ui/: screen.h  ui.c  ui.h
