idf_component_register(
    SRCS
        "main.c"                       
        "ui/ui.c"                     
        "drivers/lcd_driver.c"         
        "drivers/lvgl_tick.c"   
        "drivers/touch_driver.c" 
        "drivers/i2c_scan.c"      
        "drivers/imu_driver.c"
        "connectivity/wifi.c"          
        "connectivity/time_sync.c"     
        "fonts/inter_14.c"             
        "fonts/inter_20.c"
        "fonts/inter_32.c"
        "fonts/inter_48.c"
        "features/step_counter.c"
        "features/stopwatch.c"
        "features/battery.c"
        "old_ui/labels.c"
        "old_ui/screen.c"
        
    INCLUDE_DIRS
        "."                            
        "ui"                      
        "drivers"                      
        "connectivity"                 
        "fonts"  
        "features"                      
        "old_ui"
        
    REQUIRES
        lvgl
        esp_lvgl_port
        esp_lcd_gc9a01
        esp_wifi
        esp_netif
        nvs_flash
        lwip
)
